@@ -64,7 +64,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="../../genindex.html" title="General Index" accesskey="I">index</a>
+							<a href="{documentation.generalIndex.url}" title="{documentation.generalIndex.url}" accesskey="I">index</a>
 						</li>
 						<f:if condition="{documentation.nextDocument}">
 							<li>
@@ -99,7 +99,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="../../genindex.html" title="General Index">index</a>
+							<a href="{documentation.generalIndex.url}" title="{documentation.generalIndex.url}">index</a>
 						</li>
 						<f:if condition="{documentation.nextDocument}">
 							<li>
@@ -123,8 +123,7 @@
 	</div>
 	<!-- /.d -->
 	<div id="header" class="h">
-		<a id="logo" href="#"><img width="118" height="34" alt="TYPO3 Logo"
-								   src="http://docs.typo3.org/t3extras/i/typo3-logo.png"></a>
+		<a id="logo" href="#"><img width="118" height="34" alt="TYPO3 Logo" src="http://docs.typo3.org/t3extras/i/typo3-logo.png"></a>
 		<ul class="nav" id="ul-nav">
 			<!-- #ul-nav gets replaced by js -->
 			<li>&nbsp;</li>
