@@ -1,3 +1,7 @@
+2013-05-31  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Add support for general index
+
 2013-05-30  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Render master TOC with interactive layout
